# CodeCortX-MCP

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
benches/: performance.rs
docs/: api.md
queries/: c-references.scm  c-symbols.scm  cpp-references.scm  cpp-symbols.scm  csharp-references.scm  csharp-symbols.scm  go-references.scm  go-symbols.scm  java-references.scm  java-symbols.scm  javascript-references.scm  javascript-symbols.scm  kotlin-references.scm  kotlin-symbols.scm  objc-references.scm  objc-symbols.scm  php-references.scm  php-symbols.scm  python-references.scm  python-symbols.scm  ruby-references.scm  ruby-symbols.scm  rust-references.scm  rust-symbols.scm  scala-references.scm  scala-symbols.scm  swift-references.scm  swift-symbols.scm  typescript-references.scm  typescript-symbols.scm
samples/: README.md
samples/c/: complex_example.c
samples/cpp/: complex_example.cpp
samples/csharp/: ComplexExample.cs
samples/go/: complex_example.go
samples/java/: ComplexExample.java
samples/javascript/: complex_example.js
samples/php/: complex_example.php
samples/python/: complex_example.py
samples/ruby/: complex_example.rb
samples/rust/: complex_example.rs
samples/typescript/: complex_example.ts
src/: lib.rs  main.rs
src/indexing/: indexer.rs  indexing_pipeline.rs  mod.rs
src/languages/: models.rs
src/mcp/: mod.rs  outline_tools.rs  tools.rs
src/search/: bm25_index.rs  mod.rs
src/storage/: cache.rs  mod.rs  store.rs
src/utils/: error.rs  filesystem.rs  lru.rs  memory.rs  mod.rs  path.rs  watcher.rs
tests/: comprehensive_language_test.rs  individual_language_tests.rs  integration_test.rs  outline_tools_test.rs  performance_validation.rs
